# visual_servoing_scara

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml
log_rosbags/: info.txt
media/: frames.gv
msg/: Float64Array.msg
old_src/: scara_fk.cpp  scara_fk_COPY.cpp  scara_ik.cpp
scara_controller/config/: _scara_control.yaml  scara_control.yaml
scara_description/urdf/: _object.xacro  object.gazebo  object.xacro  scara.gazebo  scara.urdf  scara.xacro  scara_config.yaml
scara_gazebo/launch/: _scara.launch  scara.launch
scara_gazebo/plugins/: controller_plugins.xml
scara_gazebo/worlds/: scara_pbvs.world
scara_ros/common_utils/include/: Utils.hpp
scara_ros/common_utils/src/: Utils.cpp
scara_ros/include/: ScaraConstants.hpp
scara_ros/kinematics/include/: ROSLogistics.hpp  ScaraKinematics.hpp
scara_ros/kinematics/src/: ROSLogistics.cpp  ScaraKinematics.cpp  main.cpp
scara_ros/plugin_myVelController/include/: MyVelocityController.hpp
scara_ros/plugin_myVelController/src/: MyVelocityController.cpp
scara_ros/src/: scara_ik.cpp
scara_ros/visual_servoing_opencv/include/: ROSLogistics_VisualServoing.hpp  VisualServoing.hpp
scara_ros/visual_servoing_opencv/src/: ROSLogistics_VisualServoing.cpp  VisualServoing.cpp  main.cpp
srv/: scara_fk.srv  scara_ik.srv  scara_qd_to_twist.srv  scara_twist_to_qd.srv  scara_vel_control.srv
