<?xml version="1.0"?>
<package format="2">

    <name>scara_gazebo</name>
    <version>0.0.0</version>
    <description>The RBE500 Group Assignment Scara package</description>
    <url type="website">git</url>
    <maintainer email="ejayaraju@wpi.edu">emmanuel</maintainer>
    <maintainer email="fenil@wpi.edu">fenil</maintainer>
    <maintainer email="krutarth@wpi.edu">krutarth</maintainer>
    <author email="ejayaraju@wpi.edu">Emmanuel</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
